prusti-tests/tests/verify/ui/counterexamples/no-return.stderr
error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/no-return.rs:11:5
   |
11 |     assert!(z != y + 5);
   |     ^^^^^^^^^^^^^^^^^^^
   |
note: counterexample for "x"
  initial value: 42
  final value:   42
  --> $DIR/no-return.rs:5:10
   |
5  | fn test1(x: i32, y: i32) {
   |          ^
note: counterexample for "y"
  initial value: ?
  final value:   30
  --> $DIR/no-return.rs:5:18
   |
5  | fn test1(x: i32, y: i32) {
   |                  ^
note: counterexample for "z"
  final value:   35
  --> $DIR/no-return.rs:6:9
   |
6  |     let z = if x == 42 {
   |         ^
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

